[package]
name = "check-for-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
reqwest = { version = "0.11.18", features = ["blocking", "serde_json", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
spinners = "4.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10" }
